feat(doc): create swagger documentation fo pocket
