# app/api/handler/category.go
@@ -35,9 +35,9 @@ type catHandler struct {
 // @Accept       json
 // @Produce      json
 // @Param		 Body body model.NewCategory true "Request Body"
-// @Success      200  {object}  data.ResponseSuccess{data=model.CategoryResp}
-// @Failure      400  {object}  data.ResponseErr
-// @Failure      500  {object}  data.Response500Err
+// @Success      200  {object}  misc.ResponseSuccess{data=model.CategoryResp}
+// @Failure      400  {object}  misc.ResponseErr
+// @Failure      500  {object}  misc.Response500Err
 // @Router       /categories [post]
 func (ch catHandler) CreateCategory(w http.ResponseWriter, r *http.Request) {
 	claims, err := mid.GetClaims(r.Context())
@@ -87,9 +87,9 @@ func (ch catHandler) CreateCategory(w http.ResponseWriter, r *http.Request) {
 // @Produce      json
 // @Param		 category_id path string true "category_id"
 // @Param		 Body body model.UpdateCategory true "Request Body"
-// @Success      200  {object}  data.ResponseSuccess{data=model.CategoryResp}
-// @Failure      400  {object}  data.ResponseErr
-// @Failure      500  {object}  data.Response500Err
+// @Success      200  {object}  misc.ResponseSuccess{data=model.CategoryResp}
+// @Failure      400  {object}  misc.ResponseErr
+// @Failure      500  {object}  misc.Response500Err
 // @Router       /categories/{category_id} [put]
 func (ch catHandler) EditCategory(w http.ResponseWriter, r *http.Request) {
 	claims, err := mid.GetClaims(r.Context())
@@ -146,9 +146,9 @@ func (ch catHandler) EditCategory(w http.ResponseWriter, r *http.Request) {
 // @Accept       json
 // @Produce      json
 // @Param 		 pocket_id path string true "pocket_id"
-// @Success      200  {object}  data.ResponseSuccessList{data=[]model.CategoryResp}
-// @Failure      400  {object}  data.ResponseErr
-// @Failure      500  {object}  data.Response500Err
+// @Success      200  {object}  misc.ResponseSuccessList{data=[]model.CategoryResp}
+// @Failure      400  {object}  misc.ResponseErr
+// @Failure      500  {object}  misc.Response500Err
 // @Router       /categories/from-pocket/{pocket_id} [get]
 func (ch catHandler) FindPocketCategory(w http.ResponseWriter, r *http.Request) {
 	// extract url query
@@ -190,9 +190,9 @@ func (ch catHandler) FindPocketCategory(w http.ResponseWriter, r *http.Request) 
 // @Accept       json
 // @Produce      json
 // @Param 		 category_id path string true "category_id"
-// @Success      200  {object}  data.ResponseMessage
-// @Failure      400  {object}  data.ResponseErr
-// @Failure      500  {object}  data.Response500Err
+// @Success      200  {object}  misc.ResponseMessage
+// @Failure      400  {object}  misc.ResponseErr
+// @Failure      500  {object}  misc.Response500Err
 // @Router       /categories/{category_id} [delete]
 func (ch catHandler) DeleteCategory(w http.ResponseWriter, r *http.Request) {
 	// extract url query
